# paperless-cortex

./: .env.example  .env.worker.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CURRENT_STATUS_ANALYSIS.md  Dockerfile  FINAL_STATUS.md  IMPROVEMENT_SUMMARY.md  LICENSE  MANUAL.md  README.md  TYPE_CHECKING_EXPANSION.md  agents.md  docker-compose.app.yml  docker-compose.full.yml  docker-compose.worker.yml  main.py  pyproject.toml
backend/: openapi.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0132c6a5422e_drop_storage_path_checksum.py  0746f98ddb79_init.py  0921dc485789_init.py  1c2b6e8f4d7a_add_document_suggestions.py  2f6e9b1a3c4d_add_suggestion_audit.py  5b1e2d9a7c11_add_document_page_anchors.py  6d3183eda0be_add_core_metadata_tables.py  6f4c2d1a9b7e_rename_hierarchy_json_columns_to_text.py  734a3748aa6a_add_cancel_requested.py  7e0af35a82d3_merge_heads.py  8b7c2c91a0a1_add_embedding_source.py  8d2a6a9f2a1b_add_document_page_texts.py  9c6d2c1b1a44_add_document_ocr_scores.py  aa91f0b6c2d1_add_document_pending_tags.py  b7c4d8e9f1a2_add_task_run_composite_indexes.py  b8c1f9e2d4a5_expand_deleted_at_length.py  bb27df3fb2b5_add_sync_progress.py  c4f9b8e1d2a3_add_ai_model_fields.py  c9d3a7f1b214_add_task_runs_table.py  d12f9a4c7e31_add_clean_text_fields_to_page_texts.py  d4b8f3a1e77c_add_task_run_checkpoint.py  e17c5670eb63_add_document_embeddings.py  e3b7c2d9a541_add_page_notes_and_section_summaries.py  f1a2b3c4d5e6_add_writeback_jobs.py  f23ae6e45f05_add_sync_state.py  f5c3a9b2d1e4_add_runtime_model_provider_overrides.py  fa11d0c9b2e1_add_document_pending_correspondents.py
backend/app/: api_models.py  config.py  db.py  deps.py  exceptions.py  main.py  models.py  schemas.py  version.py  worker.py
backend/app/prompts/: chat.txt  chat_chrono.txt  chat_followups.txt  suggestions.txt  suggestions_correspondent.txt  suggestions_date.txt  suggestions_self_correct_system.txt  suggestions_summary.txt  suggestions_tags.txt  suggestions_title.txt  vision_ocr.txt
backend/app/routes/: chat.py  connections.py  documents.py  documents_actions.py  documents_common.py  documents_similarity.py  documents_suggestions.py  embeddings.py  meta.py  queue.py  queue_guard.py  settings.py  status.py  sync.py  writeback_dryrun.py
backend/app/services/: chat.py  connections.py  dashboard.py  document_review.py  documents.py  embedding_init.py  embeddings.py  error_types.py  evidence.py  evidence_index.py  guard.py  hierarchical_generation.py  hierarchical_helpers.py  hierarchical_storage.py  hierarchical_summary.py  hierarchical_summary_pipeline.py  json_utils.py  llm_client.py  logging_setup.py  meta_cache.py  meta_sync.py  meta_upsert.py  ocr_scoring.py  ollama.py  page_text_store.py  page_texts_merge.py  page_types.py  paperless.py  pipeline_planner.py  process_missing.py  qdrant.py  queue.py  queue_tasks.py  similarity.py  string_list_json.py  suggestion_store.py  suggestions.py  task_runs.py  text_cleaning.py  text_pages.py  (+7 more)
backend/app/services/ai/: chat.py  hierarchical_generation.py  hierarchical_helpers.py  hierarchical_storage.py  hierarchical_summary.py  hierarchical_summary_pipeline.py  json_extraction.py  llm_client.py  ocr_scoring.py  suggestion_apply.py  suggestion_operations.py  suggestion_store.py  suggestions.py  text_budget.py  vision_ocr.py
backend/app/services/documents/: cleanup_text_request.py  dashboard.py  dashboard_cache.py  document_loader.py  document_mutations.py  document_stats.py  document_stats_cache.py  document_task_request.py  documents.py  documents_list_cache.py  embedding_operations.py  intelligence_cleanup.py  local_document_cache.py  note_ids.py  operations.py  page_text_store.py  page_texts_cache.py  page_texts_merge.py  page_texts_payload.py  page_types.py  pagination.py  process_missing_request.py  read_models.py  reprocess_request.py  sync_operations.py  text_cleaning.py  text_pages.py
backend/app/services/integrations/: connections.py  meta_cache.py  meta_sync.py  meta_upsert.py  paperless.py
backend/app/services/pipeline/: error_types.py  pipeline_fanout.py  pipeline_planner.py  process_missing.py  queue.py  queue_access.py  queue_responses.py  queue_tasks.py  sync_state.py  task_runs.py  worker_checkpoint.py  worker_content_tasks.py  worker_dispatch.py  worker_document_tasks.py  worker_orchestration.py  worker_queue_runtime.py  worker_runtime.py  worker_suggestion_tasks.py  worker_task_execution.py
backend/app/services/runtime/: guard.py  json_utils.py  logging_setup.py  metrics.py  model_providers.py  string_list_json.py  time_utils.py
backend/app/services/search/: embedding_init.py  embeddings.py  evidence.py  evidence_index.py  qdrant.py  similarity.py  vector_integrity.py  vector_maintenance.py  vector_store.py  weaviate.py
backend/app/services/writeback/: writeback_apply.py  writeback_commands.py  writeback_context.py  writeback_direct.py  (+10 more)
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_api_error_responses.py  test_chat_evidence_routes.py  test_chat_routes.py  test_chat_service_evidence.py  test_config.py  test_connections_routes.py  test_connections_service.py  test_db.py  test_documents_actions_routes.py  test_documents_routes.py  test_documents_suggestions_routes.py  test_embedding_chunk_budget.py  test_embeddings_routes.py  test_evidence_service.py  test_hierarchical_summary_parsing.py  test_http_client_pooling.py  test_json_utils.py  test_large_doc_processing.py  test_logging_setup.py  test_meta_routes.py  test_meta_sync.py  test_note_ids.py  test_ocr_scoring_client_pool.py  test_pipeline_fanout_service.py  test_pipeline_similarity_index.py  test_process_missing_route.py  test_process_missing_service.py  test_qdrant_service.py  test_queue_delayed_routes.py  test_queue_dlq_routes.py  test_queue_resilience.py  test_queue_routes_basic.py  test_queue_stats_self_heal.py  test_queue_task_runs_routes.py  test_request_logging.py  test_settings_routes.py  test_similarity_service.py  test_status_routes.py  test_string_list_json.py  (+24 more)
docs/: TODO.md  (+6 more)
(+187 files in other folders)
