[project]
name = "paperless-intelligence-backend"
version = "0.1.0"
description = "FastAPI backend for Paperless Intelligence"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.112.0",
    "httpx>=0.27.0",
    "pdfminer.six>=20221105",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.1",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.3",
    "uvicorn>=0.30.0",
]

[tool.uv]
dev-dependencies = [
    "alembic>=1.13.2",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]
