[project]
name = "paperless-intelligence-backend"
version = "0.1.0"
description = "FastAPI backend for Paperless Intelligence"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.112.0",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "pdfminer.six>=20221105",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.1",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.3",
    "uvicorn>=0.30.0",
]

[tool.uv]
dev-dependencies = [
    "alembic>=1.13.2",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
follow_imports = "skip"
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
files = [
    "app/services/writeback_execution.py",
    "app/services/writeback_selection.py",
    "app/services/writeback_direct.py",
    "app/services/writeback_preview.py",
    "app/services/worker_checkpoint.py",
    "app/routes/writeback_dryrun.py",
    "app/worker.py",
]

[[tool.mypy.overrides]]
module = [
    "app.routes.writeback_dryrun",
    "app.worker",
]
disallow_untyped_defs = false
check_untyped_defs = false
